tests/list/list_unclosed_left.ast.err
Error: Unexpected token in input, expected end of input
   ╭─[tests/list/list_unclosed_left.scm:1:3]
   │
 1 │ 32)
   ·   ┬  
   ·   ╰── Unexpected token )
───╯
