tests/list/list_unclosed_left.token
[
    (
        Integer(
            32,
        ),
        0..2,
    ),
    (
        Keyword(
            ")",
        ),
        2..3,
    ),
]